# cpp_net_homework8_2_server

./: Abonent.cpp  Abonent.h  AbonentsManager.cpp  AbonentsManager.h  CMakeLists.txt  MessengerServer.cpp  MessengerServer.h  README.md  ResponsesCreator.cpp  ResponsesCreator.h  cert.pem  key.pem  logins.txt  main.cpp
